responsive cleanup of other parts + adding footer for any disclaimers we may need

--- a/modules/mobile-technology-overview/edge_includes/base.css
+++ b/modules/mobile-technology-overview/edge_includes/base.css
@@ -38,12 +38,40 @@ body { margin: 0; padding: 0; background: #fff }
 	max-width: 556px !important;
 	margin: 0 auto;
 }
-
+.ftr {
+	background: #666;
+	color: #fff;
+	padding: 41px 0;
+	text-align: center;
+}
+.ftr p {
+	font: 16px/20px "Qualcomm-Light", sans-serif;
+	margin: 0 0 1.5em;
+}
 @media only screen and (max-width: 800px ) {
 	#header h1 { font-size: 4em }
 	#header h2 { font-size: 3em }
 }
+@media only screen and (max-width: 600px ) {
+	#Stage4_animation { width: 100% !important }
+	#Stage4_animation_Text2 br { display: none }
+}
+@media only screen and (max-width: 550px ) {
+	#Stage4_animation_Text { font-size: 65px !important }
+}
 @media only screen and (max-width: 500px ) {
 	#header h1 { font-size: 2.8em }
 	#header h2 { font-size: 2em }
+	
+	#Stage4_animation_Text { font-size: 60px !important }
+	#Stage4_animation_Text2 { font-size: 24px !important; line-height: 28px !important }
+	
+	#Stage5_Text2 { font-size: 24px !important }
+	#Stage5_road { right: -75px !important }
+	#Stage5_CarsGo2 { right: -57px !important }
+}
+@media only screen and (max-width: 480px ) {
+	#Stage4_animation_Text { font-size: 38px !important }
+	
+	.ftr p { font-size: 13px }
 }
