--- a/modules/6ways/css/main.css
+++ b/modules/6ways/css/main.css
@@ -193,6 +193,9 @@ h1 strong {
 .hdr .eco.chip i {
 	background-image: url(../img/chip.png);
 }
+.section.squares {
+	padding-bottom: 160px;
+}
 .square {
 	background: url(../img/home.jpg) no-repeat 0 0;
 	background-size: cover;
@@ -255,13 +258,13 @@ h1 strong {
 	transition: opacity 0.3s linear;
 }
 .square a {
-	background: url(../img/plus.png) no-repeat 0 0;
+	background: url(../img/plus.png) no-repeat 24px 24px;
 	display: none;
-	width: 49px;
-	height: 49px;
+	width: 100%;
+	height: 100%;
 	position: absolute;
-	top: 24px;
-	left: 24px;
+	top: 0;
+	left: 0;
 	z-index: 3;
 	
 	opacity: 1;
@@ -296,7 +299,6 @@ h1 strong {
 	background: #fff;
 	height: 93px;
 	position: relative;
-	margin-top: 160px;
 }
 .proceed a {
 	font: 29px/33px "Qualcomm-Regular", sans-serif;
@@ -377,8 +379,7 @@ h1 strong {
 		height: 243px;
 	}
 	.js .square a {
-		top: 15px;
-		left: 15px;
+		background-position: 15px 15px;
 	}
 	.square .txt {
 		right: 15px;
