accidnetally missed less bottom spacing on over state on iphone landscape (screen size between 540px & 599px)

--- a/modules/6ways/css/main.css
+++ b/modules/6ways/css/main.css
@@ -385,6 +385,9 @@ h1 strong {
 		right: 15px;
 		bottom: 15px;
 	}
+	.js .square.onn .txt {
+		bottom: 15px;
+	}
 	.hdr .eco.c1 {
 		left: 253px;
 	}
