Proceed to Assessment cta

--- a/modules/5coolthings/css/main.css
+++ b/modules/5coolthings/css/main.css
@@ -779,6 +779,27 @@ sup {
     }
 /* end single chip */
 
+/* CTA */
+.block#proceed,
+.block#proceed .inner {
+	min-height: 0
+}
+#proceed .text-position.center {
+	padding: 5.5% 5%;
+}
+#proceed .sprite.play {
+	display: inline-block;
+	float: none;
+	vertical-align: middle;
+	width: 64px;
+	height: 63px;
+	background: url(../img/btn-play.png) no-repeat 0 0;
+}
+#proceed a {
+	text-decoration: none;
+}
+/* end CTA */
+
 /* legal section */
     #legal .text-position p { font-size: 0.8em; margin-bottom: 1em; }
     #legal #logo { margin: 70px auto 30px; }
