--- a/modules/_common/css/jquery.qualcomm-reveal.css
+++ b/modules/_common/css/jquery.qualcomm-reveal.css
@@ -1,11 +1,22 @@
 /*=========================================================================================
-Author: Tou Lee
+Copyright © wslash LLC.
+
+All rights reserved. This file and any accompanying materials are licensed for specific 
+use only by wslash and/or its partners and clients, and is not to be used or distributed 
+except in compliance and/or permission with wslash LLC. 
+This file id distributed without warranty.
+
+Contributor(s): Tou Lee
+
 Created: 2/20/14
-Last Updated: 2/21/14 - 10:54pm
-Version: 1.0.0
+Last Updated: 3/5/14 - 12:23pm
+Version: 1.0.1
 
 Changelog v1.0
  	- Created the intial styles
+
+Changelob v1.0.1
+	- Commented out "visiblity:hidden" for the trigger, so that it will show in IE9 and below
 
 ==========================================================================================*/
 /* ----------------------------------------------------------------------------------------
@@ -38,7 +49,7 @@ div#qreveal-trigger {
 	bottom: -90px;
 	left: 0;
 	z-index: -1;
-	visibility: hidden;
+	/*visibility: hidden;*/
 	opacity: 0;
 }
 
@@ -56,8 +67,6 @@ div#qreveal-spinner {
 /* ----------------------------------------------------- 
    Mobile & Tablet
 ----------------------------------------------------- */
-@media only screen and (max-width: 767px) { 
-
-}
+@media only screen and (max-width: 767px) {}
 
 
