--- a/modules/who-is-qualcomm/css/main.css
+++ b/modules/who-is-qualcomm/css/main.css
@@ -439,16 +439,15 @@ sup {
 	-moz-animation:fadeloop 5s ease-in 3s infinite backwards;
 	animation:fadeloop 5s ease-in 3s infinite backwards;
 }
-
 .block.bg-img .inner {
 	height: 100%;
 }
 .block.bg-img .text-position {
+	margin-top: -40px;
 	padding-top: 0;
 	position: relative;
 	top: 50%;
 	left: 0;
-	margin-top: -40px;
 }
 .block.bg-img .graphic-position {
 	position: absolute;
@@ -457,16 +456,13 @@ sup {
 	width: 100%;
 	height: 100%;
 }
-
+/* #0 header section */
 .block.bg-img#hdr {
-	background: url(../img/bg-top.jpg) no-repeat center center;
-}
-.block.bg-img#hdr .inner {
-	height: 100%;
+	background: url(../img/bg-top2.jpg) no-repeat center center;
 }
 .block.bg-img#hdr .text-position {
 	padding: 0;
-	top: 30%;
+	top: 35%;
 	margin-top: 0;
 }
 h1 {
@@ -474,19 +470,18 @@ h1 {
 	line-height: 100%;
 	font-weight: normal;
 	letter-spacing: 2px;
-	margin: 0.6em 0;
+	margin: 0;
 }
 .js .comeon.onn h1.fadein {
 	-webkit-animation-duration: 1.5s;
-	-webkit-animation-duration: 1.5s;
+	-moz-animation-duration: 1.5s;
 	animation-duration: 1.5s;
 	
 	-webkit-animation-delay: 0.5s;
-	-webkit-animation-delay: 0.5s;
+	-moz-animation-delay: 0.5s;
 	animation-delay: 0.5s;
 }
-
-@media only screen and (min-width:800px) and (max-width: 960px) {
+@media only screen and (min-width: 800px) and (max-width: 960px) {
 	.block.bg-img#hdr {
 		background-position: 70% 50%;
 	}
@@ -495,20 +490,37 @@ h1 {
 	.block.bg-img#hdr {
 		background-position: 40% 50%;
 	}
+	.block.bg-img#hdr .text-position {
+		top: 30%;
+	}
 }
-@media only screen and (min-width: 480px) and (max-width:599px) {
-	.block#hdr .text-position { top: 10% }
+@media only screen and (min-width: 480px) and (max-width: 599px) {
+	.block.bg-img#hdr .text-position {
+		top: 22%;
+	}
+}
+@media only screen and (max-width: 479px) {
+	.block.bg-img#hdr .text-position {
+		top: 10%;
+	}
+}
+@media only screen and (max-width: 379px) {
+	.block.bg-img#hdr .text-position {
+		top: 15%;
+	}
+	h1 {
+		font-size: 2em;
+	}
 }
 /* #1 intro */
 #intro .text-position p {
 	margin-top: 0;
-
+	line-height: 1.1;
 }
-#intro h2, #across4 h2 { display: none }
 #intro .text-position ul {
 	max-width: none;
 	font-size: 0.9em;
-	line-height: 1em;
+	line-height: 1.1;
 	letter-spacing: 0;
 	margin-top: 1em;
 	margin-bottom: 0;
