--- a/modules/connectivity/css/main.css
+++ b/modules/connectivity/css/main.css
@@ -435,23 +435,161 @@ sup {
 /* #0 header : bg-hdr + ic-hdr */
 /* #1 learn : ic-learn */
 /* #2 mbroad : bg-mbroad + ic-mbroad? */
-/* #3 faster : ic-bars */
+#mbroad {
+	background: url(../img/bg-mbroad.jpg) no-repeat 50% 50%;
+}
+#mbroad .eco {
+	width: 226px;
+	height: 209px;
+	margin: 3em auto 0;
+}
+#mbroad .eco .in {
+	background: url(../img/ic-mbroad.png) no-repeat 0 0;
+	background-size: cover;
+}
+.block.bg-img#mbroad .text-position {
+	padding-top: 0;
+	top: 70%;
+}
+#mbroad h2 {
+	-moz-animation-delay: 0.5s;
+	-webkit-animation-delay: 0.5s;
+	animation-delay: 0.5s;
+}
+@media only screen and (min-width: 800px) {
+	.block.bg-img#mbroad .text-position {
+		top: auto;
+		bottom: -65%;
+	}
+}
+@media only screen and (min-width: 960px) {
+	#mbroad .eco {
+		margin-top: 4em;
+	}
+}
+/* #3 bars : ic-bars */
+#bars .text-position h3 {
+	font-family: "Qualcomm-Regular", sans-serif;
+}
+#bars .text-position h3 .thick {
+	font-family: "Qualcomm-Semibold", sans-serif;
+}
+#bars .graphic-position {
+	height: 300px;
+	margin: 90px auto;
+}
+.bars {
+	width: 265px;
+	height: 100%;
+	margin: 0 auto;
+}
+.bars .c {
+	float: left;
+	width: 44px;
+	height: 300px;
+	margin-left: 9px;
+	position: relative;
+}
+.bars .b {
+	display: block;
+	width: 100%;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+}
+.bars .b.b1 {
+	height: 10px;
+}
+.bars .b.b2 {
+	height: 30px;
+}
+.bars .b.b3 {
+	height: 50px;
+}
+.bars .b.b4 {
+	height: 130px;
+}
+.bars .b.b5 {
+	height: 100%;
+}
+.bars .in {
+	background: url(../img/ic-bar.png) repeat-y 0 100%;
+	display: block;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+}
+.js #bars.comeon .bars .in {
+	display: none;
+}
+.js #bars.comeon.onn .bars .in {
+	display: block;
+	
+	-webkit-animation:bard 0.4s ease-in backwards;
+	-moz-animation:bard 0.4s ease-in backwards;
+	animation:bard 0.4s ease-in backwards;
+}
+.js #bars.comeon.onn .bars .b2 .in {
+	-webkit-animation-delay: 0.5s;
+	-moz-animation-delay: 0.5s;
+	animation-delay: 0.5s;
+}
+.js #bars.comeon.onn .bars .b3 .in {
+	-webkit-animation-delay: 1s;
+	-moz-animation-delay: 1s;
+	animation-delay: 1s;
+}
+.js #bars.comeon.onn .bars .b4 .in {
+	-webkit-animation-delay: 1.5s;
+	-moz-animation-delay: 1.5s;
+	animation-delay: 1.5s;
+}
+.js #bars.comeon.onn .bars .b5 .in {
+	-webkit-animation-delay: 2s;
+	-moz-animation-delay: 2s;
+	animation-delay: 2s;
+}
+@media only screen and (min-width: 960px) {
+    .bars {
+        float: right;
+		margin-right: 80px;
+    }
+	#bars .text-position {
+		padding-top: 0;
+		position: absolute;
+		left: 80px;
+		top: 65px;
+		width: 60%;
+	}
+}
 /* #4 global : plusses : 43, 51, 33 (ic-plus) */
+#global {
+	padding-bottom: 8%;
+}
+#global .text-position h2 {
+	margin: 1em 0 2em;
+}
 #global .text-position h3 {
 	color: #d11f2b;
-	font-size: 4em;
+	font-size: 3em;
 	line-height: 1;
 }
 #global .text-position ul {
 	margin-top: 0;
+	max-width: 100%;
 }
 #global .text-position ul li {
 	font-family: "Qualcomm-Regular", sans-serif;
+	line-height: 1;
+	margin-bottom: 0.5em;
 	position: relative;
 }
 #global .graphic-position {
 	height: 223px;
 	padding: 20px 0 50px;
+	position: relative;
 }
 #global .eco {
 	width: 100%;
@@ -463,6 +601,71 @@ sup {
 	margin: 0 auto;
 	background: url(../img/bg-global.jpg) no-repeat 0 0;
 	border-radius: 111px;
+}
+#global .p {
+	width: 43px;
+	height: 43px;
+	position: absolute;
+	top: 0;
+	left: 50%;
+	margin-left: 34px;
+}
+#global .p .in {
+	width: 100%;
+	height: 100%;
+	background: url(../img/ic-plus.png) no-repeat 0 0;
+	background-size: cover;
+}
+#global .p.p2 {
+	width: 51px;
+	height: 51px;
+	margin-left: -97px;
+	top: 209px;
+}
+#global .p.p3 {
+	width: 33px;
+	height: 33px;
+	margin-left: -46px;
+	top: 261px;
+}
+.js #global.comeon.onn .text.fadein {
+	-webkit-animation-delay: 1.2s;
+	-moz-animation-delay: 1.2s;
+	animation-delay: 1.2s;
+}
+.js #global.comeon.onn .p.growin .in {
+	-webkit-animation-duration: 0.4s;
+	-moz-animation-duration: 0.4s;
+	animation-duration: 0.4s;
+	
+	-webkit-animation-delay: 0.4s;
+	-moz-animation-delay: 0.4s;
+	animation-delay: 0.4s;
+}
+.js #global.comeon.onn .p.p2.growin .in {
+	-webkit-animation-delay: 0.6s;
+	-moz-animation-delay: 0.6s;
+	animation-delay: 0.6s;
+}
+.js #global.comeon.onn .p.p3.growin .in {
+	-webkit-animation-delay: 0.8s;
+	-moz-animation-delay: 0.8s;
+	animation-delay: 0.8s;
+}
+@media only screen and (min-width: 800px) {
+	#global .text {
+		float: left;
+		width: 480px;
+	}
+	#global .graphic-position {
+		float: left;
+		width: 320px;
+	}
+}
+@media only screen and (min-width: 960px) {
+	#global .text {
+		width: 640px;
+	}
 }
 /* #5 connec : ic-connec... */
 #connec h2 {
@@ -1347,6 +1550,9 @@ sup {
     @-webkit-keyframes growin { 0% { opacity: 0; width: 0%; height: 0%; margin: 50%; } 100% { opacity: 1; width: 100%; height: 100%; margin: 0%; } }
     @keyframes growin { 0% { opacity: 0; width: 0%; height: 0%; margin: 50%; } 100% { opacity: 1; width: 100%; height: 100%; margin: 0%; } }
 		
+    @-moz-keyframes bard { 0% { height: 0%; } 100% { height: 100%; } }
+    @-webkit-keyframes bard { 0% { height: 0%; } 100% { height: 100%; } }
+    @keyframes bard { 0% { height: 0%; } 100% { height: 100%; } }
 		/* digital ecosystems */
     @-moz-keyframes digitaleco { 0% { opacity: 0; width: 0; height: 0; -moz-transform: rotate(180deg); } 100% { width: 51px; height: 81px; opacity: 1; -moz-transform: rotate(360deg); } }
     @-webkit-keyframes digitaleco { 0% { opacity: 0; width: 0; height: 0; -webkit-transform: rotate(180deg); } 100% { width: 51px; height: 81px; opacity: 1; -webkit-transform: rotate(360deg); } }
