--- a/modules/connectivity/css/main.css
+++ b/modules/connectivity/css/main.css
@@ -432,8 +432,166 @@ sup {
 	width: 100%;
 	height: 100%;
 }
-/* #0 header : bg-hdr + ic-hdr */
+/* #0 hdr : bg-hdr + ic-hdr */
+.block.bg-img#hdr {
+	background: url(../img/bg-hdr.jpg) no-repeat center center;
+	height: 693px;
+	max-height: 693px;
+}
+.block.bg-img#hdr .text-position {
+	padding: 0;
+	top: 35%;
+	margin-top: 0;
+}
+h1 {
+	font-size: 2.5em;
+	line-height: 100%;
+	font-weight: normal;
+	letter-spacing: 2px;
+	margin: 0;
+	text-shadow: 0 0 1px rgba(0,0,0,0.7);
+}
+.js .comeon.onn h1.fadein {
+	-webkit-animation-duration: 1.5s;
+	-moz-animation-duration: 1.5s;
+	animation-duration: 1.5s;
+	
+	-webkit-animation-delay: 0.5s;
+	-moz-animation-delay: 0.5s;
+	animation-delay: 0.5s;
+}
+#hdr .eco {
+	position: absolute;
+	top: 376px;
+	left: 50%;
+	margin-left: -217px;
+	width: 101px;
+	height: 101px;
+	
+	-webkit-animation:spin 9s linear infinite;
+	-moz-animation:spin 9s linear infinite;
+	animation:spin 9s linear infinite;
+}
+#hdr .eco.e2 {
+	top: 458px;
+	margin-left: -132px;
+	width: 55px;
+	height: 55px;
+	
+	-webkit-animation:spinreverse 9s linear infinite;
+	-moz-animation:spinreverse 9s linear infinite;
+	animation:spinreverse 9s linear infinite;
+}
+#hdr .eco.e3 {
+	top: 405px;
+	margin-left: 49px;
+	width: 58px;
+	height: 58px;
+}
+#hdr .eco.growin .in {
+	background: url(../img/ic-h1.png) no-repeat 0 0;
+	background-size: cover;
+	
+	-moz-animation-delay: 1.2s;
+	-webkit-animation-delay: 1.2s;
+	animation-delay: 1.2s;
+	
+	-webkit-animation-duration: 0.4s;
+	-moz-animation-duration: 0.4s;
+	animation-duration: 0.4s;
+}
+#hdr .eco.growin.e2 .in {
+	background-image: url(../img/ic-h2.png);
+	
+	-moz-animation-delay: 1.4s;
+	-webkit-animation-delay: 1.4s;
+	animation-delay: 1.4s;
+}
+#hdr .eco.growin.e3 .in {
+	background-image: url(../img/ic-h3.png);
+	
+	-moz-animation-delay: 1.6s;
+	-webkit-animation-delay: 1.6s;
+	animation-delay: 1.6s;
+}
+/*
+@media only screen and (min-width: 800px) and (max-width: 960px) {
+	.block.bg-img#hdr {
+		background-position: 70% 50%;
+	}
+}
+*/
+@media only screen and (max-width: 799px) {
+	.block.bg-img#hdr .text-position {
+		top: 25%;
+	}
+}
+@media only screen and (min-width: 480px) and (max-width: 599px) {
+	.block.bg-img#hdr {
+		background-position: 45% 50%;
+	}
+	#hdr .eco {
+		left: 55%;
+	}
+}
+@media only screen and (max-width: 479px) {
+	.block.bg-img#hdr {
+		background-position: 40% 50%;
+	}
+	#hdr .eco {
+		left: 80%;
+	}
+	#hdr .eco.e3 {
+		top: 450px;
+		left: 65%;
+	}
+}
 /* #1 learn : ic-learn */
+#learn .graphic-position {
+	margin: 0 auto;
+	padding: 45px 0;
+	height: 109px;
+}
+#learn .eco {
+	width: 109px;
+	height: 109px;
+	margin: 0 auto;
+}
+#learn .eco.spingrow .in {
+	background: url(../img/ic-learn.png) no-repeat 50% 50%;
+	background-size: cover;
+}
+.js #learn.comeon.onn .spingrow .in {
+	display: block;
+	
+	-webkit-animation:spinin 1s ease-in backwards, growin 1s ease-in backwards;
+	-moz-animation:spinin 1s ease-in backwards, growin 1s ease-in backwards;
+	animation:spinin 1s ease-in backwards, growin 1s ease-in backwards;
+}
+#learn .text-position {
+	padding-top: 0;
+}
+#learn .text-position p {
+	line-height: 1.2;
+	margin-bottom: 1em;
+}
+#learn .text-position h3 {
+	font-size: 1.2em;
+	margin: 2em 0 0.5em;
+}
+#learn .text-position ul {
+	margin-top: 0;
+	margin-bottom: 3em;
+}
+#learn .text-position ul li {
+	position: relative;
+}
+@media only screen and (min-width: 960px) {
+	#learn .text-position {
+		width: 800px;
+		margin: 0 auto;
+	}
+}
 /* #2 mbroad : bg-mbroad + ic-mbroad? */
 #mbroad {
 	background: url(../img/bg-mbroad.jpg) no-repeat 50% 50%;
@@ -893,7 +1051,7 @@ sup {
 	height: 316px;
 	margin: 3em 0;
 }
-#chipd .chip {
+#chipd .eco.chip {
 	width: 467px;
 	height: 316px;
 	margin: 0 auto;
